syntax = "proto3";
package task;

option go_package = "tgBot/bot-service/protoGenFiles/taskpb";

import "google/rpc/status.proto";
import "task.proto";

service TaskService {
  rpc SendTask(SendTaskRequest) returns (SendTaskResponse);
  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc ChangeTask (ChangeTaskRequest) returns (ChangeTaskResponse);
}
//SendTask
message SendTaskRequest {
  Task task = 1;
  string userName = 2;
}

message SendTaskResponse{
  google.rpc.Status status=1;
  string userErrorMessage=2;
}

//GetTasks
message GetTasksRequest {
  string userName = 1;
}

message GetTasksResponse {
  bool ok=1;
  repeated Task task=2;
}

//DeleteTask
message DeleteTaskRequest {
  string userName=1;
  int64 taskNumber=2;
}

message DeleteTaskResponse {
  bool ok=1;
  google.rpc.Status status=2;
}

//ChangeTask
message ChangeTaskRequest{
  string userName=1;
  int64 taskNum=2;
  string newValue=3;
  string changeValue=4;
}

message ChangeTaskResponse{
  bool ok=1;
  google.rpc.Status status=2;
}

// protoc   -I=api   --go_out=bot-service/protoGenFiles   --go-grpc_out=bot-service/protoGenFiles   api/task_service.proto